# Rag-ChatBot

./: .gitignore  Dockerfile  README.md  app.py  chunker.py  docker-compose.yml  embedder.py  main.py  models.py  pyproject.toml  requirements.txt
parsers/: docx_parser.py  pdf_parser.py  txt_parser.py
services/: __init__.py  ingest_service.py  rag_assistant.py
storage/: __init__.py  qdrant_client.py
