[project]
name = "rag-chatbot"
version = "0.1.0"
description = ""
authors = [{ name = "karrtik159", email = "karrtikbaheti159@gmail.com" }]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
  "transformers (>=4.51.3,<5.0.0)",
  "torch (>=2.7.0,<3.0.0)",
  "pinecone-client (>=6.0.0,<7.0.0)",
  "openai (>=1.77.0,<2.0.0)",
  "fastapi (>=0.115.12,<0.116.0)",
  "uvicorn (>=0.34.2,<0.35.0)",
  "pytesseract (>=0.3.13,<0.4.0)",
  "pdfplumber (>=0.11.6,<0.12.0)",
  "python-docx (>=1.1.2,<2.0.0)",
  "ipykernel (>=6.29.5,<7.0.0)",
  "notebook (>=7.4.1,<8.0.0)",
  "pdf2image (>=1.17.0,<2.0.0)",
  "langchain (>=0.3.25,<0.4.0)",
  "langchain-community (>=0.3.23,<0.4.0)",
  "qdrant-client (>=1.14.2,<2.0.0)",
  "langchain-ollama (>=0.3.2,<0.4.0)",
  "langchain-openai (>=0.3.16,<0.4.0)",
  "streamlit (>=1.45.0,<2.0.0)",
  "sentence-transformers (>=4.1.0,<5.0.0)",
  "python-multipart (>=0.0.20,<0.0.21)",
  "langchain-qdrant (>=0.2.0,<0.3.0)",
  "langchain-huggingface (>=0.1.2,<0.2.0)",
]
[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
